--- a/pom.xml
+++ b/pom.xml
@@ -794,6 +794,13 @@
       <artifactId>commons-io</artifactId>
       <version>${commons.io.version}</version>
     </dependency>
+  
+    <dependency>
+      <groupId>io.kubernetes</groupId>
+      <artifactId>client-java</artifactId>
+      <version>1.0.0</version>
+      <scope>compile</scope>
+    </dependency>
 
     <!-- Test Dependencies -->
     <dependency>
