--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -486,9 +486,7 @@
       </build>
     </profile>
     <profile>
-      <!-- this profile adds/overrides few features of the 'apache-release'
-        profile in the parent pom. -->
-      <id>apache-release</id>
+      <id>docker</id>
       <build>
         <plugins>
           <plugin>
